--- a/index.html
+++ b/index.html
@@ -8,22 +8,22 @@
 
 <body>
 
-  <head>
+  <header>
 
     <div class="headerInfoShop">
-      <a href="#">Техномарт</a>
+      <a href="">Техномарт</a>
       <form action="">
         <input type="text" placeholder="Поиск:">
       </form>
       <ul>
         <li>
-          <a href="#">Закладки: 0</a>
+          <a href="">Закладки: 0</a>
         </li>
         <li>
-          <a href="#">Корзина: 0</a>
+          <a href="">Корзина: 0</a>
         </li>
         <li>
-          <a href="#">Оформить заказ</a>
+          <a href="">Оформить заказ</a>
         </li>
       </ul>
     </div>
@@ -50,17 +50,17 @@
     <div class="headerNavigation">
       <nav>
         <ul>
-          <li><a href="#">Главная</a></li>
-          <li><a href="#">Компания</a></li>
+          <li><a href="">Главная</a></li>
+          <li><a href="">Компания</a></li>
           <li><a href="./pages/catalog.html">Каталог</a></li>
-          <li><a href="#">Новости</a></li>
-          <li><a href="#">Спецпредложения</a></li>
-          <li><a href="#">Доставка</a></li>
-          <li><a href="#">Контакты</a></li>
+          <li><a href="">Новости</a></li>
+          <li><a href="">Спецпредложения</a></li>
+          <li><a href="">Доставка</a></li>
+          <li><a href="">Контакты</a></li>
         </ul>
       </nav>
     </div>
-  </head>
+  </header>
 
   <main>
     <section class="mainCatalog"></section>
@@ -80,7 +80,7 @@
           <li>Автотрейдинг</li>
           <li>ЖелДорЭкспедиция</li>
         </ul>
-        <a href="#">Подробнее о компании</a>
+        <a href="">Подробнее о компании</a>
       </article>
 
       <article class="mainAboutContact">
@@ -99,22 +99,22 @@
     <div class="footerNav">
 
       <div class="footerNavTop">
-        <a href="#">Техномарт</a>
+        <a href="">Техномарт</a>
         <ul>
           <li>
-            <a href="#">Компания</a>
+            <a href="">Компания</a>
           </li>
           <li>
-            <a href="#">Новости</a>
+            <a href="">Новости</a>
           </li>
           <li>
             <a href="./pages/catalog.html">Каталог</a>
           </li>
           <li>
-            <a href="#">Доставка</a>
+            <a href="">Доставка</a>
           </li>
           <li>
-            <a href="#">Контакты</a>
+            <a href="">Контакты</a>
           </li>
         </ul>
       </div>
@@ -124,16 +124,16 @@
           +7 (812) 555-05-55</p>
         <ul>
           <li>
-            <a href="#">Материалы</a>
+            <a href="">Материалы</a>
           </li>
           <li>
-            <a href="#">Техника</a>
+            <a href="">Техника</a>
           </li>
           <li>
-            <a href="#">Инструмент</a>
+            <a href="">Инструмент</a>
           </li>
           <li>
-            <a href="#">Спецпредложения</a>
+            <a href="">Спецпредложения</a>
           </li>
         </ul>
       </div>
@@ -156,7 +156,7 @@
       </div>
 
       <div>
-        <p>Обратная связь: <br><a href="#">mail@htmlacademy.ru</a></p>
+        <p>Обратная связь: <br><a href="">mail@htmlacademy.ru</a></p>
       </div>
 
       <div>
