--- a/pages/catalog.html
+++ b/pages/catalog.html
@@ -9,42 +9,43 @@
 
 <body>
 
-  <head>
+  <header>
 
     <div class="headerInfoShop">
-      <a href="#">Техномарт</a>
+      <a href="../index.html">Техномарт</a>
       <form action="">
         <input type="text" placeholder="Поиск:">
       </form>
       <ul>
         <li>
-          <a href="#">Закладки: 0</a>
+          <a href="">Закладки: 0</a>
         </li>
         <li>
-          <a href="#">Корзина: 0</a>
+          <a href="">Корзина: 0</a>
         </li>
         <li>
-          <a href="#">Оформить заказ</a>
+          <a href="">Оформить заказ</a>
         </li>
       </ul>
     </div>
 
     <div class="headerLogIn">
-
+      <p>Интернет-магазин<br>
+        строительных материалов<br>
+        и инструментов для ремонта</p>
       <div>
-        <p>Интернет-магазин<br>
-          строительных материалов<br>
-          и инструментов для ремонта</p>
-      </div>
-
-      <div>
-        <div><span>+7 (812) 555-05-55</span></div>
-        <div>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</div>
+        <div>
+          <div><a href="tel:+78125550555">+7 (812) 555-05-55</a></div>
+          <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+        </div>
         <div class="headerLogInUser">
-          <a href="#">Равшан Джамшутович</a>
           <ul>
-            <li><a href="#">Мои заказы</a></li>
-            <li><a href="#">Личный кабинет</a></li>
+            <a href="">Равшан Джамшутович</a>
+            <a href=""><img src="logOut" alt="ссылка на страницу деавторизации"></a>
+          </ul>
+          <ul>
+            <li><a href="">Мои заказы</a></li>
+            <li><a href="">Личный кабинет</a></li>
           </ul>
         </div>
       </div>
@@ -54,30 +55,28 @@
     <div class="headerNavigation">
       <nav>
         <ul>
-          <li><a href="#">Главная</a></li>
-          <li><a href="#">Компания</a></li>
+          <li><a href="">Главная</a></li>
+          <li><a href="">Компания</a></li>
           <li><a href="./pages/catalog.html">Каталог</a></li>
-          <li><a href="#">Новости</a></li>
-          <li><a href="#">Спецпредложения</a></li>
-          <li><a href="#">Доставка</a></li>
-          <li><a href="#">Контакты</a></li>
+          <li><a href="">Новости</a></li>
+          <li><a href="">Спецпредложения</a></li>
+          <li><a href="">Доставка</a></li>
+          <li><a href="">Контакты</a></li>
         </ul>
       </nav>
     </div>
 
-  </head>
+  </header>
 
   <main>
     <section>
 
-      <div>
-        <ul>
-          <li><img src="home.png" alt="home"></li>
-          <li>каталог</li>
-          <li>инструменты</li>
-          <li>перфораторы</li>
-        </ul>
-      </div>
+      <ul>
+        <li><a href=""><img src="home.png" alt="home"></a></li>
+        <li><a href="">каталог</a></li>
+        <li><a href="">инструменты</a></li>
+        <li><a href="">перфораторы</a></li>
+      </ul>
 
       <div>
         <h1>перфораторы</h1>
@@ -88,39 +87,43 @@
         <div class="mainSearch">
           <form action="">
 
-            <h2>Производители:</h2>
-            <ul>
-              <li>
-                <input type="checkbox" name="" value="Bosch" checked>
-                <label for="">Bosch</label>
-              </li>
-              <li>
-                <input type="checkbox" name="" value="Интерскол">
-                <label for="">Интерскол</label>
-              </li>
-              <li>
-                <input type="checkbox" name="" value="Makita" checked>
-                <label for="">Makita</label>
-              </li>
-              <li>
-                <input type="checkbox" name="" value="Dewalt">
-                <label for="">Dewalt</label>
-              </li>
-              <li>
-                <input type="checkbox" name="" value="Hitachi">
-                <label for="">Hitachi</label>
-              </li>
-            </ul>
+            <fieldset>
+              <h2>Производители:</h2>
+              <ul>
+                <li>
+                  <input type="checkbox" name="" value="Bosch" checked>
+                  <label for="">Bosch</label>
+                </li>
+                <li>
+                  <input type="checkbox" name="" value="Интерскол">
+                  <label for="">Интерскол</label>
+                </li>
+                <li>
+                  <input type="checkbox" name="" value="Makita" checked>
+                  <label for="">Makita</label>
+                </li>
+                <li>
+                  <input type="checkbox" name="" value="Dewalt">
+                  <label for="">Dewalt</label>
+                </li>
+                <li>
+                  <input type="checkbox" name="" value="Hitachi">
+                  <label for="">Hitachi</label>
+                </li>
+              </ul>
+            </fieldset>
 
-            <h2>Питание:</h2>
-            <ul>
-              <li>
-                <input type="radio" name="" value="battery" checked>
-                <label for="">Аккумуляторные</label>
-                <input type="radio" name="" value="current">
-                <label for="">Сетевые</label>
-              </li>
-            </ul>
+            <fieldset>
+              <h2>Питание:</h2>
+              <ul>
+                <li>
+                  <input type="radio" id='powerBattery' name="powerSupply" value="battery" checked>
+                  <label for="powerBattery">Аккумуляторные</label>
+                  <input type="radio" id='powerCurrent' name="powerSupply" value="current">
+                  <label for="powerCurrent">Сетевые</label>
+                </li>
+              </ul>
+            </fieldset>
 
             <button type="submit">Показать</button>
           </form>
@@ -130,110 +133,108 @@
 
           <article>
             <div>
-              <a href="#">Купить</a>
-              <a href="#" class="">В закладки</a>
+              <a href="">Купить</a>
+              <a href="" class="">В закладки</a>
             </div>
-            <div>
-              <img src="img/bosh.jpg" width="100" height="100" alt="Перфоратор Bosch">
-            </div>
+            <img src="img/bosh.jpg" width="100" height="100" alt="Перфоратор Bosch">
             <p>Перфоратор BOSCH BFG 3000<br><span>22500 Р.</span></p>
-            <a class="btn" href="#">15500 Р.</a>
+            <a class="btn" href="">15500 Р.</a>
           </article>
 
           <article>
             <div>
-              <a href="#">Купить</a>
-              <a href="#" class="">В закладки</a>
+              <a href="">Купить</a>
+              <a href="" class="">В закладки</a>
             </div>
             <div>
               <img src="img/bosh.jpg" width="100" height="100" alt="Перфоратор Bosch">
             </div>
             <p>Перфоратор BOSCH BFG 3000<br><span>22500 Р.</span></p>
-            <a class="btn" href="#">15500 Р.</a>
+            <a class="btn" href="">15500 Р.</a>
           </article>
 
           <article>
             <div>
-              <a href="#">Купить</a>
-              <a href="#" class="">В закладки</a>
+              <a href="">Купить</a>
+              <a href="" class="">В закладки</a>
             </div>
             <div>
               <img src="img/bosh.jpg" width="100" height="100" alt="Перфоратор Bosch">
             </div>
             <p>Перфоратор BOSCH BFG 3000<br><span>22500 Р.</span></p>
-            <a class="btn" href="#">15500 Р.</a>
+            <a class="btn" href="">15500 Р.</a>
           </article>
 
           <article>
             <div>
-              <a href="#">Купить</a>
-              <a href="#" class="">В закладки</a>
+              <a href="">Купить</a>
+              <a href="" class="">В закладки</a>
             </div>
             <div>
               <img src="img/bosh.jpg" width="100" height="100" alt="Перфоратор Bosch">
             </div>
             <p>Перфоратор BOSCH BFG 3000<br><span>22500 Р.</span></p>
-            <a class="btn" href="#">15500 Р.</a>
+            <a class="btn" href="">15500 Р.</a>
           </article>
 
           <article>
             <div>
-              <a href="#">Купить</a>
-              <a href="#" class="">В закладки</a>
+              <a href="">Купить</a>
+              <a href="" class="">В закладки</a>
             </div>
             <div>
               <img src="img/bosh.jpg" width="100" height="100" alt="Перфоратор Bosch">
             </div>
             <p>Перфоратор BOSCH BFG 3000<br><span>22500 Р.</span></p>
-            <a class="btn" href="#">15500 Р.</a>
+            <a class="btn" href="">15500 Р.</a>
           </article>
 
           <article>
             <div>
-              <a href="#">Купить</a>
-              <a href="#" class="">В закладки</a>
+              <a href="">Купить</a>
+              <a href="" class="">В закладки</a>
             </div>
             <div>
               <img src="img/bosh.jpg" width="100" height="100" alt="Перфоратор Bosch">
             </div>
             <p>Перфоратор BOSCH BFG 3000<br><span>22500 Р.</span></p>
-            <a class="btn" href="#">15500 Р.</a>
+            <a class="btn" href="">15500 Р.</a>
           </article>
 
           <article>
             <div>
-              <a href="#">Купить</a>
-              <a href="#" class="">В закладки</a>
+              <a href="">Купить</a>
+              <a href="" class="">В закладки</a>
             </div>
             <div>
               <img src="img/bosh.jpg" width="100" height="100" alt="Перфоратор Bosch">
             </div>
             <p>Перфоратор BOSCH BFG 3000<br><span>22500 Р.</span></p>
-            <a class="btn" href="#">15500 Р.</a>
+            <a class="btn" href="">15500 Р.</a>
           </article>
 
           <article>
             <div>
-              <a href="#">Купить</a>
-              <a href="#" class="">В закладки</a>
+              <a href="">Купить</a>
+              <a href="" class="">В закладки</a>
             </div>
             <div>
               <img src="img/bosh.jpg" width="100" height="100" alt="Перфоратор Bosch">
             </div>
             <p>Перфоратор BOSCH BFG 3000<br><span>22500 Р.</span></p>
-            <a class="btn" href="#">15500 Р.</a>
+            <a class="btn" href="">15500 Р.</a>
           </article>
 
           <article>
             <div>
-              <a href="#">Купить</a>
-              <a href="#" class="">В закладки</a>
+              <a href="">Купить</a>
+              <a href="" class="">В закладки</a>
             </div>
             <div>
               <img src="img/bosh.jpg" width="100" height="100" alt="Перфоратор Bosch">
             </div>
             <p>Перфоратор BOSCH BFG 3000<br><span>22500 Р.</span></p>
-            <a class="btn" href="#">15500 Р.</a>
+            <a class="btn" href="">15500 Р.</a>
           </article>
 
         </div>
@@ -246,22 +247,22 @@
     <div class="footerNav">
 
       <div class="footerNavTop">
-        <a href="#">Техномарт</a>
+        <a href="">Техномарт</a>
         <ul>
           <li>
-            <a href="#">Компания</a>
+            <a href="">Компания</a>
           </li>
           <li>
-            <a href="#">Новости</a>
+            <a href="">Новости</a>
           </li>
           <li>
             <a href="./pages/catalog.html">Каталог</a>
           </li>
           <li>
-            <a href="#">Доставка</a>
+            <a href="">Доставка</a>
           </li>
           <li>
-            <a href="#">Контакты</a>
+            <a href="">Контакты</a>
           </li>
         </ul>
       </div>
@@ -271,16 +272,16 @@
           +7 (812) 555-05-55</p>
         <ul>
           <li>
-            <a href="#">Материалы</a>
+            <a href="">Материалы</a>
           </li>
           <li>
-            <a href="#">Техника</a>
+            <a href="">Техника</a>
           </li>
           <li>
-            <a href="#">Инструмент</a>
+            <a href="">Инструмент</a>
           </li>
           <li>
-            <a href="#">Спецпредложения</a>
+            <a href="">Спецпредложения</a>
           </li>
         </ul>
       </div>
@@ -303,11 +304,11 @@
       </div>
 
       <div>
-        <p>Обратная связь: <br><a href="#">mail@htmlacademy.ru</a></p>
+        <p>Обратная связь: <br><a href="">mail@htmlacademy.ru</a></p>
       </div>
 
       <div>
-        <p>Разработано - <br><a href="https://htmlacademy.ru">htmlacademy.ru</a></p>
+        <p>Разработано - <br><a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a></p>
       </div>
 
     </div>
