2. Разметка - исправил подвал на главной

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
       </div>
 
       <div>
-        <p>Разработано - <br><a href="https://htmlacademy.ru">htmlacademy.ru</a></p>
+        <p>Разработано - <br><a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a></p>
       </div>
 
     </div>
