--- a/catalog.html
+++ b/catalog.html
@@ -12,7 +12,7 @@
   <header>
 
     <div class="headerInfoShop">
-      <a href="../index.html">Техномарт</a>
+      <a href="index.html">Техномарт</a>
       <form action="">
         <input type="text" placeholder="Поиск:">
       </form>
@@ -21,7 +21,7 @@
           <a href="">Закладки: 0</a>
         </li>
         <li>
-          <a href="">Корзина: 0</a>
+          <a href="">Корзина: 10</a>
         </li>
         <li>
           <a href="">Оформить заказ</a>
@@ -35,13 +35,13 @@
         и инструментов для ремонта</p>
       <div>
         <div>
-          <div><a href="tel:+78125550555">+7 (812) 555-05-55</a></div>
+          <a href="tel:+78125550555">+7 (812) 555-05-55</a>
           <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
         </div>
         <div class="headerLogInUser">
           <ul>
-            <a href="">Равшан Джамшутович</a>
-            <a href=""><img src="logOut" alt="ссылка на страницу деавторизации"></a>
+            <li><a href="">Равшан Джамшутович</a></li>
+            <li><a href=""><img src="logOut" alt="ссылка на страницу деавторизации"></a></li>
           </ul>
           <ul>
             <li><a href="">Мои заказы</a></li>
@@ -57,7 +57,7 @@
         <ul>
           <li><a href="">Главная</a></li>
           <li><a href="">Компания</a></li>
-          <li><a href="./pages/catalog.html">Каталог</a></li>
+          <li><a href="catalog.html">Каталог</a></li>
           <li><a href="">Новости</a></li>
           <li><a href="">Спецпредложения</a></li>
           <li><a href="">Доставка</a></li>
@@ -78,9 +78,7 @@
         <li><a href="">перфораторы</a></li>
       </ul>
 
-      <div>
-        <h1>перфораторы</h1>
-      </div>
+      <h1>перфораторы</h1>
 
       <div>
 
@@ -256,7 +254,7 @@
             <a href="">Новости</a>
           </li>
           <li>
-            <a href="./pages/catalog.html">Каталог</a>
+            <a href="catalog.html">Каталог</a>
           </li>
           <li>
             <a href="">Доставка</a>
@@ -290,26 +288,18 @@
 
     <div class="footerContact">
 
-      <div>
-        <p>© 2010–2019 Компания «Техномарт»<br>
-          Все права защищены</p>
-      </div>
+      <p>© 2010–2019 Компания «Техномарт»<br>
+        Все права защищены</p>
 
-      <div>
-        <ul>
-          <li><img src="iconVK" alt="icon vk.com"></li>
-          <li><img src="iconF" alt="icon facebook.com"></li>
-          <li><img src="iconInsta" alt="icon instagrem.com"></li>
-        </ul>
-      </div>
+      <ul>
+        <li><a href=""><img src="iconVK" alt="icon vk.com"></a></li>
+        <li><a href=""><img src="iconF" alt="icon facebook.com"></a></li>
+        <li><a href=""><img src="iconInsta" alt="icon instagrem.com"></a></li>
+      </ul>
 
-      <div>
-        <p>Обратная связь: <br><a href="">mail@htmlacademy.ru</a></p>
-      </div>
+      <p>Обратная связь: <br><a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a></p>
 
-      <div>
-        <p>Разработано - <br><a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a></p>
-      </div>
+      <p>Разработано - <br><a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a></p>
 
     </div>
 
