--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div><span>+7 (812) 555-05-55</span></div>
         <div>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</div>
         <div>
-          <button type="button">Войти</button>
+          <button type="button"><img src="logIn" alt="ссылка на страницу авторизации">Войти</button>
           <button type="button">Регистрация</button>
         </div>
       </div>
@@ -52,7 +52,7 @@
         <ul>
           <li><a href="">Главная</a></li>
           <li><a href="">Компания</a></li>
-          <li><a href="./pages/catalog.html">Каталог</a></li>
+          <li><a href="catalog.html">Каталог</a></li>
           <li><a href="">Новости</a></li>
           <li><a href="">Спецпредложения</a></li>
           <li><a href="">Доставка</a></li>
@@ -70,7 +70,7 @@
     <section class="mainAbout">
 
       <article class="mainAboutSlogon">
-        <h1>КОМПАНИЯ «Техномарт»</h1>
+        <h2>КОМПАНИЯ «Техномарт»</h2>
         <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и<br>
           строительства не оставит равнодушными любителей сэкномить на гастарбайтерах.</p>
         <p>Мы можем доставить ваш товар в самые отдаленные точки России!<br>
@@ -108,7 +108,7 @@
             <a href="">Новости</a>
           </li>
           <li>
-            <a href="./pages/catalog.html">Каталог</a>
+            <a href="catalog.html">Каталог</a>
           </li>
           <li>
             <a href="">Доставка</a>
@@ -142,26 +142,18 @@
 
     <div class="footerContact">
 
-      <div>
-        <p>© 2010–2019 Компания «Техномарт»<br>
-          Все права защищены</p>
-      </div>
+      <p>© 2010–2019 Компания «Техномарт»<br>
+        Все права защищены</p>
 
-      <div>
-        <ul>
-          <li><img src="iconVK" alt="icon vk.com"></li>
-          <li><img src="iconF" alt="icon facebook.com"></li>
-          <li><img src="iconInsta" alt="icon instagrem.com"></li>
-        </ul>
-      </div>
+      <ul>
+        <li><a href=""><img src="iconVK" alt="icon vk.com"></a></li>
+        <li><a href=""><img src="iconF" alt="icon facebook.com"></a></li>
+        <li><a href=""><img src="iconInsta" alt="icon instagrem.com"></a></li>
+      </ul>
 
-      <div>
-        <p>Обратная связь: <br><a href="">mail@htmlacademy.ru</a></p>
-      </div>
+      <p>Обратная связь: <br><a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a></p>
 
-      <div>
-        <p>Разработано - <br><a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a></p>
-      </div>
+      <p>Разработано - <br><a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a></p>
 
     </div>
 
