3. Работа с графикой - нарезал картинки и добавил на страницы

--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
         <div><span>+7 (812) 555-05-55</span></div>
         <div>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</div>
         <div>
-          <button type="button"><img src="logIn" alt="ссылка на страницу авторизации">Войти</button>
+          <button type="button"><img src="img/icon-login.svg" width="20" height="17"
+              alt="ссылка на страницу авторизации">Войти</button>
           <button type="button">Регистрация</button>
         </div>
       </div>
@@ -87,7 +88,7 @@
         <h1>контакты</h1>
         <p>Вы можете забрать товар сами,<br>
           заехав в наш офис:</p>
-        <img src="rnd.png" alt="google map">
+        <img src="img/map.png" width="300" height="158" alt="г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
         <button type="button">Заблудились? Напишите нам!</button>
       </article>
 
@@ -146,9 +147,10 @@
         Все права защищены</p>
 
       <ul>
-        <li><a href=""><img src="iconVK" alt="icon vk.com"></a></li>
-        <li><a href=""><img src="iconF" alt="icon facebook.com"></a></li>
-        <li><a href=""><img src="iconInsta" alt="icon instagrem.com"></a></li>
+        <li><a href=""><img src="img/icon-vk.svg" width="26" height="15" alt="ссылка на страницу вконтакте"></a></li>
+        <li><a href=""><img src="img/icon-fb.svg" width="12" height="22" alt="ссылка на страницу фейсбука"></a></li>
+        <li><a href=""><img src="img/icon-insta.svg" width="21" height="21" alt="ссылка на страницу инстаграмма"></a>
+        </li>
       </ul>
 
       <p>Обратная связь: <br><a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a></p>
