--- a/catalog.html
+++ b/catalog.html
@@ -41,7 +41,8 @@
         <div class="headerLogInUser">
           <ul>
             <li><a href="">Равшан Джамшутович</a></li>
-            <li><a href=""><img src="logOut" alt="ссылка на страницу деавторизации"></a></li>
+            <li><a href=""><img src="img/icon-logout.svg" width="20" height="17"
+                  alt="ссылка на страницу деавторизации"></a></li>
           </ul>
           <ul>
             <li><a href="">Мои заказы</a></li>
@@ -72,7 +73,7 @@
     <section>
 
       <ul>
-        <li><a href=""><img src="home.png" alt="home"></a></li>
+        <li><a href=""><img src="img/icon-home.svg" width="14" height="12" alt="home"></a></li>
         <li><a href="">каталог</a></li>
         <li><a href="">инструменты</a></li>
         <li><a href="">перфораторы</a></li>
@@ -134,7 +135,7 @@
               <a href="">Купить</a>
               <a href="" class="">В закладки</a>
             </div>
-            <img src="img/bosh.jpg" width="100" height="100" alt="Перфоратор Bosch">
+            <img src="img/bosch-bfg-3000.png" width="218" height="170" alt="Перфоратор Bosch БФГ-3000">
             <p>Перфоратор BOSCH BFG 3000<br><span>22500 Р.</span></p>
             <a class="btn" href="">15500 Р.</a>
           </article>
@@ -145,10 +146,10 @@
               <a href="" class="">В закладки</a>
             </div>
             <div>
-              <img src="img/bosh.jpg" width="100" height="100" alt="Перфоратор Bosch">
+              <img src="img/bosch-bfg-6000.png" width="218" height="170" alt="Перфоратор Bosch БФГ-6000">
             </div>
-            <p>Перфоратор BOSCH BFG 3000<br><span>22500 Р.</span></p>
-            <a class="btn" href="">15500 Р.</a>
+            <p>Перфоратор BOSCH BFG 6000<br><span>30500 Р.</span></p>
+            <a class="btn" href="">25500 Р.</a>
           </article>
 
           <article>
@@ -157,10 +158,10 @@
               <a href="" class="">В закладки</a>
             </div>
             <div>
-              <img src="img/bosh.jpg" width="100" height="100" alt="Перфоратор Bosch">
+              <img src="img/bosch-bfg-2000.png" width="218" height="170" alt="Перфоратор Bosch БФГ-2000">
             </div>
-            <p>Перфоратор BOSCH BFG 3000<br><span>22500 Р.</span></p>
-            <a class="btn" href="">15500 Р.</a>
+            <p>Перфоратор BOSCH BFG 2000<br></p>
+            <a class="btn" href="">12500 Р.</a>
           </article>
 
           <article>
@@ -169,19 +170,7 @@
               <a href="" class="">В закладки</a>
             </div>
             <div>
-              <img src="img/bosh.jpg" width="100" height="100" alt="Перфоратор Bosch">
-            </div>
-            <p>Перфоратор BOSCH BFG 3000<br><span>22500 Р.</span></p>
-            <a class="btn" href="">15500 Р.</a>
-          </article>
-
-          <article>
-            <div>
-              <a href="">Купить</a>
-              <a href="" class="">В закладки</a>
-            </div>
-            <div>
-              <img src="img/bosh.jpg" width="100" height="100" alt="Перфоратор Bosch">
+              <img src="img/bosch-bfg-3000.png" width="218" height="170" alt="Перфоратор Bosch БФГ-3000">
             </div>
             <p>Перфоратор BOSCH BFG 3000<br><span>22500 Р.</span></p>
             <a class="btn" href="">15500 Р.</a>
@@ -193,7 +182,31 @@
               <a href="" class="">В закладки</a>
             </div>
             <div>
-              <img src="img/bosh.jpg" width="100" height="100" alt="Перфоратор Bosch">
+              <img src="img/bosch-bfg-6000.png" width="218" height="170" alt="Перфоратор Bosch БФГ-6000">
+            </div>
+            <p>Перфоратор BOSCH BFG 6000<br><span>30500 Р.</span></p>
+            <a class="btn" href="">25500 Р.</a>
+          </article>
+
+          <article>
+            <div>
+              <a href="">Купить</a>
+              <a href="" class="">В закладки</a>
+            </div>
+            <div>
+              <img src="img/bosch-bfg-2000.png" width="218" height="170" alt="Перфоратор Bosch БФГ-2000">
+            </div>
+            <p>Перфоратор BOSCH BFG 2000<br></p>
+            <a class="btn" href="">12500 Р.</a>
+          </article>
+
+          <article>
+            <div>
+              <a href="">Купить</a>
+              <a href="" class="">В закладки</a>
+            </div>
+            <div>
+              <img src="img/bosch-bfg-3000.png" width="218" height="170" alt="Перфоратор Bosch БФГ-3000">
             </div>
             <p>Перфоратор BOSCH BFG 3000<br><span>22500 Р.</span></p>
             <a class="btn" href="">15500 Р.</a>
@@ -205,10 +218,10 @@
               <a href="" class="">В закладки</a>
             </div>
             <div>
-              <img src="img/bosh.jpg" width="100" height="100" alt="Перфоратор Bosch">
+              <img src="img/bosch-bfg-6000.png" width="218" height="170" alt="Перфоратор Bosch БФГ-6000">
             </div>
-            <p>Перфоратор BOSCH BFG 3000<br><span>22500 Р.</span></p>
-            <a class="btn" href="">15500 Р.</a>
+            <p>Перфоратор BOSCH BFG 6000<br><span>30500 Р.</span></p>
+            <a class="btn" href="">25500 Р.</a>
           </article>
 
           <article>
@@ -217,22 +230,10 @@
               <a href="" class="">В закладки</a>
             </div>
             <div>
-              <img src="img/bosh.jpg" width="100" height="100" alt="Перфоратор Bosch">
+              <img src="img/bosch-bfg-2000.png" width="218" height="170" alt="Перфоратор Bosch БФГ-2000">
             </div>
-            <p>Перфоратор BOSCH BFG 3000<br><span>22500 Р.</span></p>
-            <a class="btn" href="">15500 Р.</a>
-          </article>
-
-          <article>
-            <div>
-              <a href="">Купить</a>
-              <a href="" class="">В закладки</a>
-            </div>
-            <div>
-              <img src="img/bosh.jpg" width="100" height="100" alt="Перфоратор Bosch">
-            </div>
-            <p>Перфоратор BOSCH BFG 3000<br><span>22500 Р.</span></p>
-            <a class="btn" href="">15500 Р.</a>
+            <p>Перфоратор BOSCH BFG 2000<br></p>
+            <a class="btn" href="">12500 Р.</a>
           </article>
 
         </div>
@@ -292,9 +293,10 @@
         Все права защищены</p>
 
       <ul>
-        <li><a href=""><img src="iconVK" alt="icon vk.com"></a></li>
-        <li><a href=""><img src="iconF" alt="icon facebook.com"></a></li>
-        <li><a href=""><img src="iconInsta" alt="icon instagrem.com"></a></li>
+        <li><a href=""><img src="img/icon-vk.svg" width="26" height="15" alt="ссылка на страницу вконтакте"></a></li>
+        <li><a href=""><img src="img/icon-fb.svg" width="12" height="22" alt="ссылка на страницу фейсбука"></a></li>
+        <li><a href=""><img src="img/icon-insta.svg" width="21" height="21" alt="ссылка на страницу инстаграмма"></a>
+        </li>
       </ul>
 
       <p>Обратная связь: <br><a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a></p>
