картинка логотипа вместо текста логотипа

--- a/catalog.html
+++ b/catalog.html
@@ -12,7 +12,7 @@
   <header>
 
     <div class="headerInfoShop">
-      <a href="index.html">Техномарт</a>
+      <a href="index.html"><img src="img/logo-technomart.svg" alt="Техномарт"></a>
       <form action="">
         <input type="text" placeholder="Поиск:">
       </form>
@@ -246,7 +246,7 @@
     <div class="footerNav">
 
       <div class="footerNavTop">
-        <a href="">Техномарт</a>
+        <a href=""><img src="img/logo-technomart.svg" alt="Техномарт"></a>
         <ul>
           <li>
             <a href="">Компания</a>
