--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header>
 
     <div class="headerInfoShop">
-      <a href="">Техномарт</a>
+      <a href=""><img src="img/logo-technomart.svg" alt="Техномарт"></a>
       <form action="">
         <input type="text" placeholder="Поиск:">
       </form>
@@ -100,7 +100,7 @@
     <div class="footerNav">
 
       <div class="footerNavTop">
-        <a href="">Техномарт</a>
+        <a href=""><img src="img/logo-technomart.svg" alt="Техномарт"></a>
         <ul>
           <li>
             <a href="">Компания</a>
