--- a/catalog.html
+++ b/catalog.html
@@ -90,24 +90,24 @@
               <h2>Производители:</h2>
               <ul>
                 <li>
-                  <input type="checkbox" name="" value="Bosch" checked>
-                  <label for="">Bosch</label>
+                  <input type="checkbox" name="bosch" id="bosch" value="Bosch" checked>
+                  <label for="bosch">Bosch</label>
                 </li>
                 <li>
-                  <input type="checkbox" name="" value="Интерскол">
-                  <label for="">Интерскол</label>
+                  <input type="checkbox" name="interscol" id="interscol" value="Интерскол">
+                  <label for="interscol">Интерскол</label>
                 </li>
                 <li>
-                  <input type="checkbox" name="" value="Makita" checked>
-                  <label for="">Makita</label>
+                  <input type="checkbox" name="makita" id="makita" value="Makita" checked>
+                  <label for="makita">Makita</label>
                 </li>
                 <li>
-                  <input type="checkbox" name="" value="Dewalt">
-                  <label for="">Dewalt</label>
+                  <input type="checkbox" name="dewaly" id="dewaly" value="Dewalt">
+                  <label for="dewaly">Dewalt</label>
                 </li>
                 <li>
-                  <input type="checkbox" name="" value="Hitachi">
-                  <label for="">Hitachi</label>
+                  <input type="checkbox" name="hitachi" id="hitachi" value="Hitachi">
+                  <label for="hitachi">Hitachi</label>
                 </li>
               </ul>
             </fieldset>
@@ -131,109 +131,133 @@
         <div class="mainSearchResult">
 
           <article>
-            <div>
-              <a href="">Купить</a>
-              <a href="" class="">В закладки</a>
-            </div>
-            <img src="img/bosch-bfg-3000.png" width="218" height="170" alt="Перфоратор Bosch БФГ-3000">
-            <p>Перфоратор BOSCH BFG 3000<br><span>22500 Р.</span></p>
-            <a class="btn" href="">15500 Р.</a>
-          </article>
-
-          <article>
-            <div>
-              <a href="">Купить</a>
-              <a href="" class="">В закладки</a>
-            </div>
-            <div>
-              <img src="img/bosch-bfg-6000.png" width="218" height="170" alt="Перфоратор Bosch БФГ-6000">
-            </div>
-            <p>Перфоратор BOSCH BFG 6000<br><span>30500 Р.</span></p>
-            <a class="btn" href="">25500 Р.</a>
-          </article>
-
-          <article>
-            <div>
-              <a href="">Купить</a>
-              <a href="" class="">В закладки</a>
-            </div>
-            <div>
-              <img src="img/bosch-bfg-2000.png" width="218" height="170" alt="Перфоратор Bosch БФГ-2000">
-            </div>
-            <p>Перфоратор BOSCH BFG 2000<br></p>
-            <a class="btn" href="">12500 Р.</a>
-          </article>
-
-          <article>
-            <div>
-              <a href="">Купить</a>
-              <a href="" class="">В закладки</a>
-            </div>
-            <div>
+            <a href="" class="card">
+              <div class="visually-hidden">
+                <a href="">Купить</a>
+                <a href="" class="">В закладки</a>
+              </div>
               <img src="img/bosch-bfg-3000.png" width="218" height="170" alt="Перфоратор Bosch БФГ-3000">
-            </div>
-            <p>Перфоратор BOSCH BFG 3000<br><span>22500 Р.</span></p>
-            <a class="btn" href="">15500 Р.</a>
+              <p>Перфоратор BOSCH BFG 3000<p>22500 Р.</p>
+              </p>
+              <a class="btn" href="">15500 Р.</a>
+            </a>
           </article>
 
           <article>
-            <div>
-              <a href="">Купить</a>
-              <a href="" class="">В закладки</a>
-            </div>
-            <div>
-              <img src="img/bosch-bfg-6000.png" width="218" height="170" alt="Перфоратор Bosch БФГ-6000">
-            </div>
-            <p>Перфоратор BOSCH BFG 6000<br><span>30500 Р.</span></p>
-            <a class="btn" href="">25500 Р.</a>
+            <a href="" class="card">
+              <div class="visually-hidden">
+                <a href="">Купить</a>
+                <a href="" class="">В закладки</a>
+              </div>
+              <div>
+                <img src="img/bosch-bfg-6000.png" width="218" height="170" alt="Перфоратор Bosch БФГ-6000">
+              </div>
+              <p>Перфоратор BOSCH BFG 6000<p>30500 Р.</p>
+              </p>
+              <a class="btn" href="">25500 Р.</a>
+            </a>
           </article>
 
           <article>
-            <div>
-              <a href="">Купить</a>
-              <a href="" class="">В закладки</a>
-            </div>
-            <div>
-              <img src="img/bosch-bfg-2000.png" width="218" height="170" alt="Перфоратор Bosch БФГ-2000">
-            </div>
-            <p>Перфоратор BOSCH BFG 2000<br></p>
-            <a class="btn" href="">12500 Р.</a>
+            <a href="" class="card">
+              <div class="visually-hidden">
+                <a href="">Купить</a>
+                <a href="" class="">В закладки</a>
+              </div>
+              <div>
+                <img src="img/bosch-bfg-2000.png" width="218" height="170" alt="Перфоратор Bosch БФГ-2000">
+              </div>
+              <p>Перфоратор BOSCH BFG 2000</p>
+              <a class="btn" href="">12500 Р.</a>
+            </a>
           </article>
 
           <article>
-            <div>
-              <a href="">Купить</a>
-              <a href="" class="">В закладки</a>
-            </div>
-            <div>
-              <img src="img/bosch-bfg-3000.png" width="218" height="170" alt="Перфоратор Bosch БФГ-3000">
-            </div>
-            <p>Перфоратор BOSCH BFG 3000<br><span>22500 Р.</span></p>
-            <a class="btn" href="">15500 Р.</a>
+            <a href="" class="card">
+              <div class="visually-hidden">
+                <a href="">Купить</a>
+                <a href="" class="">В закладки</a>
+              </div>
+              <div>
+                <img src="img/bosch-bfg-3000.png" width="218" height="170" alt="Перфоратор Bosch БФГ-3000">
+              </div>
+              <p>Перфоратор BOSCH BFG 3000<p>22500 Р.</p>
+              </p>
+              <a class="btn" href="">15500 Р.</a>
+            </a>
           </article>
 
           <article>
-            <div>
-              <a href="">Купить</a>
-              <a href="" class="">В закладки</a>
-            </div>
-            <div>
-              <img src="img/bosch-bfg-6000.png" width="218" height="170" alt="Перфоратор Bosch БФГ-6000">
-            </div>
-            <p>Перфоратор BOSCH BFG 6000<br><span>30500 Р.</span></p>
-            <a class="btn" href="">25500 Р.</a>
+            <a href="" class="card">
+              <div class="visually-hidden">
+                <a href="">Купить</a>
+                <a href="" class="">В закладки</a>
+              </div>
+              <div>
+                <img src="img/bosch-bfg-6000.png" width="218" height="170" alt="Перфоратор Bosch БФГ-6000">
+              </div>
+              <p>Перфоратор BOSCH BFG 6000<p>30500 Р.</p>
+              </p>
+              <a class="btn" href="">25500 Р.</a>
+            </a>
           </article>
 
           <article>
-            <div>
-              <a href="">Купить</a>
-              <a href="" class="">В закладки</a>
-            </div>
-            <div>
-              <img src="img/bosch-bfg-2000.png" width="218" height="170" alt="Перфоратор Bosch БФГ-2000">
-            </div>
-            <p>Перфоратор BOSCH BFG 2000<br></p>
-            <a class="btn" href="">12500 Р.</a>
+            <a href="" class="card">
+              <div class="visually-hidden">
+                <a href="">Купить</a>
+                <a href="" class="">В закладки</a>
+              </div>
+              <div>
+                <img src="img/bosch-bfg-2000.png" width="218" height="170" alt="Перфоратор Bosch БФГ-2000">
+              </div>
+              <p>Перфоратор BOSCH BFG 2000</p>
+              <a class="btn" href="">12500 Р.</a>
+            </a>
+          </article>
+
+          <article>
+            <a href="" class="card">
+              <div class="visually-hidden">
+                <a href="">Купить</a>
+                <a href="" class="">В закладки</a>
+              </div>
+              <div>
+                <img src="img/bosch-bfg-3000.png" width="218" height="170" alt="Перфоратор Bosch БФГ-3000">
+              </div>
+              <p>Перфоратор BOSCH BFG 3000<p>22500 Р.</p>
+              </p>
+              <a class="btn" href="">15500 Р.</a>
+            </a>
+          </article>
+
+          <article>
+            <a href="" class="card">
+              <div class="visually-hidden">
+                <a href="">Купить</a>
+                <a href="" class="">В закладки</a>
+              </div>
+              <div>
+                <img src="img/bosch-bfg-6000.png" width="218" height="170" alt="Перфоратор Bosch БФГ-6000">
+              </div>
+              <p>Перфоратор BOSCH BFG 6000<p>30500 Р.</p>
+              </p>
+              <a class="btn" href="">25500 Р.</a>
+            </a>
+          </article>
+
+          <article>
+            <a href="" class="card">
+              <div class="visually-hidden">
+                <a href="">Купить</a>
+                <a href="" class="">В закладки</a>
+              </div>
+              <div>
+                <img src="img/bosch-bfg-2000.png" width="218" height="170" alt="Перфоратор Bosch БФГ-2000">
+              </div>
+              <p>Перфоратор BOSCH BFG 2000</p>
+              <a class="btn" href="">12500 Р.</a>
+            </a>
           </article>
 
         </div>
@@ -306,6 +330,13 @@
     </div>
 
   </footer>
+
+  <div class="modalCart visually-hidden">
+    <button type="button" class="modalCartClose" href="">X</button>
+    <p class="modalCartArticle">Товар добавлен в корзину!</p>
+    <a class="modalCartBuy" href="">Оформить заказ</a>
+    <button type="button" class="modalCartClose">Продолжить покупки</button>
+  </div>
 
 </body>
 
