--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
         <h1>контакты</h1>
         <p>Вы можете забрать товар сами,<br>
           заехав в наш офис:</p>
-        <img src="img/map.png" width="300" height="158" alt="г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
+        <a href=""><img src="img/map.png" width="300" height="158"
+            alt="г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8"></a>
         <button type="button">Заблудились? Напишите нам!</button>
       </article>
 
@@ -160,6 +161,35 @@
     </div>
 
   </footer>
+
+  <div class="modalContact visually-hidden">
+    <button class="modalContactClose" href="">X</button>
+    <form class="modalContactForm" action="" method="post">
+
+      <label class="modalContactFormLabel" for="name">Ваше имя:
+        <input class="modalContactFormInput" type="text" name="name" id="name" placeholder="Имя Фамилия">
+      </label>
+
+      <label class="modalContactFormLabel" for="email">Ваш e-mail:
+        <input class="modalContactFormInput" type="email" name="email" id="email" placeholder="email@example.com">
+      </label>
+
+      <label class="modalContactFormLabel" for="text">Текст письма:
+        <textarea class="modalContactFormInput" name="text" rows="5" id="text"
+          placeholder="В свободной форме"></textarea>
+      </label>
+
+      <button class="modalBtn" type="submit">Отправить</button>
+    </form>
+  </div>
+
+  <div class="modalCart visually-hidden">
+    <button type="button" class="modalCartClose" href="">X</button>
+    <p class="modalCartArticle">Товар добавлен в корзину!</p>
+    <a class="modalCartBuy" href="">Оформить заказ</a>
+    <button type="button" class="modalCartClose">Продолжить покупки</button>
+  </div>
+
 </body>
 
 </html>
