4. Доступность и формы. Исправил замечания.

--- a/catalog.html
+++ b/catalog.html
@@ -13,7 +13,7 @@
 
     <div class="headerInfoShop">
       <a href="index.html"><img src="img/logo-technomart.svg" alt="Техномарт"></a>
-      <form action="">
+      <form action="https://echo.htmlacademy.ru">
         <input type="text" placeholder="Поиск:">
       </form>
       <ul>
@@ -84,7 +84,7 @@
       <div>
 
         <div class="mainSearch">
-          <form action="">
+          <form action="https://echo.htmlacademy.ru">
 
             <fieldset>
               <h2>Производители:</h2>
@@ -332,7 +332,7 @@
   </footer>
 
   <div class="modalCart visually-hidden">
-    <button type="button" class="modalCartClose" href="">X</button>
+    <button type="button" class="modalCartClose" aria-label="Закрыть модальное окно">X</button>
     <p class="modalCartArticle">Товар добавлен в корзину!</p>
     <a class="modalCartBuy" href="">Оформить заказ</a>
     <button type="button" class="modalCartClose">Продолжить покупки</button>
