--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <div class="headerInfoShop">
       <a href=""><img src="img/logo-technomart.svg" alt="Техномарт"></a>
-      <form action="">
+      <form action="https://echo.htmlacademy.ru">
         <input type="text" placeholder="Поиск:">
       </form>
       <ul>
@@ -163,8 +163,8 @@
   </footer>
 
   <div class="modalContact visually-hidden">
-    <button class="modalContactClose" href="">X</button>
-    <form class="modalContactForm" action="" method="post">
+    <button class="modalContactClose" type="button">X</button>
+    <form class="modalContactForm" action="https://echo.htmlacademy.ru" method="post">
 
       <label class="modalContactFormLabel" for="name">Ваше имя:
         <input class="modalContactFormInput" type="text" name="name" id="name" placeholder="Имя Фамилия">
@@ -184,10 +184,8 @@
   </div>
 
   <div class="modalCart visually-hidden">
-    <button type="button" class="modalCartClose" href="">X</button>
-    <p class="modalCartArticle">Товар добавлен в корзину!</p>
-    <a class="modalCartBuy" href="">Оформить заказ</a>
-    <button type="button" class="modalCartClose">Продолжить покупки</button>
+    <button type="button" class="modalCartClose" aria-label="Закрыть модальное окно">X</button>
+    <img src="img/big-map.png" width="1736" height="779" alt="г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
   </div>
 
 </body>
