4. Доступность и формы. Исправил название блока модалки

--- a/index.html
+++ b/index.html
@@ -183,8 +183,8 @@
     </form>
   </div>
 
-  <div class="modalCart visually-hidden">
-    <button type="button" class="modalCartClose" aria-label="Закрыть модальное окно">X</button>
+  <div class="modalMap visually-hidden">
+    <button type="button" class="modalMapClose" aria-label="Закрыть модальное окно">X</button>
     <img src="img/big-map.png" width="1736" height="779" alt="г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
   </div>
 
