4. Доступность и формы. фрейм яндекс.карты

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
   <div class="modalMap visually-hidden">
     <button type="button" class="modalMapClose" aria-label="Закрыть модальное окно">X</button>
-    <img src="img/big-map.png" width="1736" height="779" alt="г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
+    <iframe src="https://yandex.ru/map-widget/v1/-/CKQxyQji" width="1736" height="779" frameborder="1" allowfullscreen="true"></iframe>
   </div>
 
 </body>
