поправил ошибки валидации w3c

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section class="contacts container">
       <h1 class="main-title">Интернет-магазин строительных материалов <br> и инструментов для ремонта</h1>
       <address class="contacts-info">
-        <a href="" class="contacts-tel" href="tel:+78125550555">+7 (812) 555-05-55</a>
+        <a аclass="contacts-tel" href="tel:+78125550555">+7 (812) 555-05-55</a>
         <p class="contacts-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
       </address>
       <ul class="user-navigation-list">
@@ -401,7 +401,7 @@
     <button class="modal-close" type="button">
       <span class="visually-hidden">Закрыть</span>
     </button>
-      <iframe src="https://yandex.ru/map-widget/v1/-/CKQxyQji" width="960" height="560" frameborder="1" allowfullscreen="true"></iframe>
+      <iframe src="https://yandex.ru/map-widget/v1/-/CKQxyQji" width="960" height="560"></iframe>
     </div>
   </section>
   <section class="modal-basket">
