--- a/catalog.html
+++ b/catalog.html
@@ -14,7 +14,7 @@
         <a class="main-header-logo" href="index.html">
           <img src="img/logo-technomart.svg" width="109" height="17" alt="Логотип интернет-магазина Техномарт">
         </a>
-        <form class="search-form" method="POST" action="">
+        <form class="search-form">
           <label class="visually-hidden" for="search">Поиск по сайту</label>
           <input class="search" type="search" id="search" name="search" placeholder="Поиск:">
           <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17">
@@ -95,7 +95,7 @@
       <div class="page-catalog">
       <aside class="filters">
         <h2 class="filter-title">Фильтр:</h2>
-        <form class="filters-form" method="POST" action="">
+        <form class="filters-form">
           <fieldset class="filter-item">
             <legend class="filter-text">Цена:</legend>
             <div class="filter-range">
