правки после первой проверки

--- a/catalog.html
+++ b/catalog.html
@@ -125,7 +125,7 @@
                 <label class="filter-item-label" for="bosch">Bosch</label>
               </li>
               <li class="filter-manufacturers-item">
-                <input class="filter-item-input visually-hidden" type="checkbox" id="interskol" name="interskol">
+                <input class="filter-item-input visually-hidden" type="checkbox" id="interskol" name="interskol" disabled>
                 <label class="filter-item-label" for="interskol">Интерскол</label>
               </li>
               <li class="filter-manufacturers-item">
