--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.min.css">
   <title>HTML Academy: Техномарт</title>
 </head>
 <body>
@@ -73,7 +73,6 @@
       <div class="category-product">
         <ul class="category-list-left">
           <li class="category-materials">
-            <img class="new-category" src="img/new-flag.png" width="60" height="59" alt="Метка нового товара">
             <h3 class="category-title">Материалы</h3>
             <a class="category-btn" href="">На любой вкус</a>
           </li>
